--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="logo.jpeg">
+  <link rel="icon" type="image/x-icon" href="./assets/icons/logo1.png">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#F47F66">
 </head>
